# automatic_timetable

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: build-check.yml
docs/: algorithms.md
src/: console_io.cpp  console_io.h  interactive_ui.cpp  interactive_ui.h  main.cpp  persistence.cpp  persistence.h  schedule.h  schedule_control.cpp  schedule_control.h  scheduling_algorithm.cpp  scheduling_algorithm.h  structs.cpp  structs.h  task.cpp  task.h  time_blocks.cpp  time_blocks.h  time_utils.cpp  time_utils.h
src/cli/: interactive_ui.cpp  interactive_ui.h  schedule_control.cpp  schedule_control.h
src/core/: scheduling_algorithm.cpp  scheduling_algorithm.h  time_blocks.h
src/io/: persistence.cpp  persistence.h
src/utils/: time_utils.h
